--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,37 +10,40 @@
     <style>
         table,
         th,
-        td{
+        td {
             border-collapse: collapse;
             border: 1px solid blue;
             padding: 1em;
         }
     </style>
 </head>
+
 <body>
-   <table>
-       <tr>
-           <td>入门条件</td>
-           <td colspan="3">nanxing</td>
-       </tr>
-       <tr >
-        <td rowspan="3">shaolin</td>
-        <td>lundao</td>
-        <td>caiquan</td>
-        <td>nihao</td>
-    </tr>
-    <tr>
-        
-        <td>xunshan</td>
-        <td>gesha</td>
-        <td>hh</td>
-    </tr>
-    <tr>
-        
-        <td>huayuan</td>
-        <td>chengzhen</td>
-        <td>xx</td>
-    </tr>
-   </table>
+    <table>
+        <tr>
+            <td>入门条件</td>
+            <td colspan="3">nanxing</td>
+        </tr>
+        <tr>
+            <td rowspan="3">shaolin</td>
+            <td>lundao</td>
+            <td>caiquan</td>
+            <td>nihao</td>
+        </tr>
+        <tr>
+
+            <td>xunshan</td>
+            <td>gesha</td>
+            <td>hh</td>
+        </tr>
+        <tr>
+
+            <td>huayuan</td>
+            <td>chengzhen</td>
+            <td>xx</td>
+        </tr>
+    </table>
+    <div></div>
 </body>
+
 </html>
