--- a/myform.html
+++ b/myform.html
@@ -59,7 +59,7 @@
         <br />
         <textarea name="suggest" id="suggest" cols="30" rows="5"></textarea>
         <br />
-        <button type="submit">输入</button>
+        <button type="submit">输入A</button>
 
     </form>
 </body>
